--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,4 +21,4 @@ jobs:
       run: cmake --build build --config Debug
 
     - name: Test
-      run: ctest --test-dir build --config Debug
+      run: ctest --test-dir build -C Debug
